--- a/ProfileMatch.Components/Layout/MainLayout.razor
+++ b/ProfileMatch.Components/Layout/MainLayout.razor
@@ -16,9 +16,9 @@
                     <MudHidden Breakpoint="Breakpoint.Xs">
                         @if (isDarkTheme)
                         {
-                        <div><img src='../../images/logo-dark.svg' alt='logo' /></div>
+                        <div><img src='../../images/logo-dark.svg' alt='Profile Match' /></div>
                         }else{
-                            <div><img src='../../images/logo-light.svg' alt='logo' /></div>
+                            <div><img src='../../images/logo-light.svg' alt='Profile Match' /></div>
                         }
                     </MudHidden>
                     <MudHidden Breakpoint="Breakpoint.Xs" Invert="true">
