cert image display update

--- a/ProfileMatch.Components/Dialogs/UserCertDialog.razor
+++ b/ProfileMatch.Components/Dialogs/UserCertDialog.razor
@@ -7,6 +7,7 @@
                           <MudTextField T="string" @bind-Value="@TempDescriptionPl" Label=@L["Certificate Description PL"] Required="true" RequiredError=@L["Certificate description is required!"] Counter="20"        MaxLength="20" HelperText=@L["Max length"]  Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))"/>
 <MudDatePicker Label=@L["Date of Issue"] @bind-Date="TempDate" DateFormat="dd/MM/yyyy" />
 <MudDatePicker Label=@L["Date Valid To"] @bind-Date="TempValidTo" DateFormat="dd/MM/yyyy" />
+<MudTextField Placeholder="@L["Certificate URL"]" T="string"/>
             <InputFile id="fileInput" OnChange="UploadImage" hidden />
             <MudButton HtmlTag="label" Variant="Variant.Outlined"
                     Color="Color.Primary"
@@ -15,7 +16,7 @@
         </MudForm>
     </DialogContent>
     <DialogActions>
-        @if (OpenCertificate==null||OpenCertificate.Id > 0)
+        @if (OpenCertificate!=null||OpenCertificate.Id > 0)
         {
         <MudButton Variant="Variant.Outlined" Size="Size.Small" Color="Color.Error" OnClick="@ToggleOpen">@L["Delete"]</MudButton>
         }
