--- a/ProfileMatch.Web/wwwroot/css/login.css
+++ b/ProfileMatch.Web/wwwroot/css/login.css
@@ -1,4 +1,4 @@
-﻿html, body {
+html, body {
     height: 100%;
 }
 
@@ -50,8 +50,8 @@ body {
 
 
 .dark-mode  {
-    background-color: #32333d;
-    color: white;
+    /* background-color: #32333d; */
+    /* color: white; */
 }
  .dark-mode .modal-content {
      background-color: #32333d;
