--- a/ProfileMatch.Web/wwwroot/css/login.css
+++ b/ProfileMatch.Web/wwwroot/css/login.css
@@ -49,18 +49,17 @@ body {
 
 
 
-.dark-mode  {
-    /* background-color: #32333d; */
-    /* color: white; */
+.dark-mode, .modal-content, #staticEmail {
+    background-color: #32333d;
+    color: white;
 }
- .dark-mode .modal-content {
+/* .dark-mode .modal-content {
      background-color: #32333d;
      color: white;
     }
     .dark-mode .form-control-plaintext {
         color: white;
-    }
+    }*/
 .logo {
     margin-bottom: 10px;
 }
-
