file structure reorder, user dialog update

--- a/ProfileMatch.Components/Admin/AdminPeopleList.razor
+++ b/ProfileMatch.Components/Admin/AdminPeopleList.razor
@@ -73,7 +73,7 @@ else
                 </Column>
                 <Column T="DepartmentUserVM" Sortable="false" Title="Actions">
                     <CellTemplate>
-                        <MudButton Color="Color.Primary" OnClick="@(()=>EditProfile(context))" Variant="Variant.Outlined">@L["Edit User"]</MudButton>
+                        <MudButton Color="Color.Primary" OnClick="@(()=>EditProfile(context))" Size=Size.Small Variant="Variant.Outlined">@L["Edit User"]</MudButton>
                     </CellTemplate>
                 </Column>
             }
