--- a/ProfileMatch.Components/Layout/MainLayout.razor
+++ b/ProfileMatch.Components/Layout/MainLayout.razor
@@ -79,31 +79,9 @@
                     </CascadingValue>
                 </MudMainContent>
             </Authorized>
-            <NotAuthorized>
-                <MudLayout>
-
-                    <MudAppBar Dense="true">
-                        <MudSpacer />
-                        <CultureSelector />
-                        @if (isDarkTheme)
-                        {
-                            <MudIconButton Class="darkSwitch" OnClick="@(()=>ChangeTheme())" Icon="@Icons.Outlined.LightMode" Style="@($"color:{Colors.Amber.Darken1};")"/>
-                        }
-                        else
-                        {
-                             <MudIconButton Class="darkSwitch" OnClick="@(()=>ChangeTheme())" Icon="@Icons.Outlined.Nightlight" Color="Color.Inherit"/>
-                        }
-                    </MudAppBar>
-                    <MudContainer MaxWidth="MaxWidth.Small" Class="d-flex align-center" Style="height: 100vh;">
-                        <div class="d-flex flex-column mud-width-full">
-
-                            <MudPaper Elevation="25" Class="pa-7" Width="100%" MaxWidth="500px">
-                                <UserLoginDisplay />
-                            </MudPaper>
-                        </div>
-                    </MudContainer>
-                </MudLayout>
-            </NotAuthorized>
+           <NotAuthorized>
+               <NoContent/>
+           </NotAuthorized>
         </AuthorizeView>
     </CascadingAuthenticationState>
 </MudLayout>
