--- a/ProfileMatch.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/ProfileMatch.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,86 +5,42 @@
 @model LoginModel
 @inject IStringLocalizer<LanguageService> L
 
-<body class="text-center">
+<div class="container d-flex p-3 mx-auto w-100 flex-column">
+    <header class="mb-auto">
+    </header>
 
-    <div class="container d-flex p-3 mx-auto w-100 flex-column">
-        <header class="mb-auto">
-        </header>
+</div>
+<form class="form-signin" id="account" method="post">
+    <div class="logo"></div>
+    <br />
+    <h1 class="h3 mb-3">@L["Proszę się zalogować"]</h1>
 
+    <input type="email" id="Input.Email" class="form-control" placeholder="Email" asp-for="Input.Email" required autofocus>
+    <input type="password" id="Input.Password" autocomplete="current-password" class="form-control" placeholder=@L["Hasło"] asp-for="Input.Password" required>
+    <div asp-validation-summary="All" class="text-danger"></div>
+    <div class="checkbox mb-3">
+        <label>
+            <input type="checkbox" value="remember-me"> @L["Zapamiętaj"]
+        </label>
     </div>
-    <form class="form-signin" id="account" method="post">
-        <div class="logo"></div>
-        <br />     
-        <h1 class="h3 mb-3">@L["Proszę się zalogować"]</h1>
-
-        <input type="email" id="Input.Email" autocomplete="current-email" class="form-control" placeholder="Email" asp-for="Input.Email" required autofocus>
-        <input type="password" id="Input.Password" autocomplete="current-password" class="form-control" placeholder=@L["Hasło"] asp-for="Input.Password" required>
-        <div asp-validation-summary="All" class="text-danger"></div>
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" value="remember-me"> @L["Zapamiętaj"]
-            </label>
+    <div class="form-group">
+        <div class="d-grid gap-3">
+            <button class="btn btn-primary btn-lg" type="submit">@L["Zaloguj"]</button>
+        <div>
+            <p>
+                <a id="forgot-password" asp-page="./ForgotPassword">@L["Forgot your password?"]</a>
+            </p>
+            <p>
+                <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">@L["Resend email confirmation"]</a>
+            </p>
         </div>
-        <div class="form-group">
-            <div class="d-grid gap-3">
-                <button class="btn btn-primary btn-lg" type="submit">@L["Zaloguj"]</button>
-            </div>
-        </div>
-    </form>
-
-    <div class="text-center">
-        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#Modal">@L["Pomoc"]</button>
-    </div>
-    <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-
-                <div class="modal-body">
-                    <form>
-                        <div class="form-group row">
-                            <label for="staticEmail" class="col-sm-2 col-form-label">@L["Email"]:</label>
-                            <div class="col-sm-10">
-                                <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="info@profilematch.pl">
-                            </div>
-                        </div>
-                        <br />
-                        <div class="form-group">
-                            <label for="exampleFormControlSelect1">@L["Wybierz temat"]:</label>
-                            <select class="form-control" id="Subject">
-                                <option>@L["1. Zapomniałeś loginu lub hasła"]</option>
-                                <option>@L["2. Nie posiadasz konta"]</option>
-                                <option>@L["3. Nie możesz się zalogować"]</option>
-                            </select>
-                            <br />
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleFormControlTextarea1">@L["Opisz swój problem"]:</label>
-                            <textarea class="message form-control" id="Message" rows="3"></textarea>
-                        </div>
-                        <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">@L["Forgot your password?"]</a>
-                    </p>
-                    </form>
-                </div>
-
-                <div class="modal-footer">
-
-
-
-                    <button type="button" class="btn btn-warning btn-sm" data-bs-dismiss="modal">@L["Anuluj"]</button>
-                    <button class="btn btn-primary btn-sm" type="submit" onclick="SendMail()">&nbsp&nbsp&nbsp @L["Wyślij"]&nbsp&nbsp&nbsp&nbsp</button>
-
-                </div>
-            </div>
         </div>
     </div>
-    <div>
-        <p class="mt-5 mb-5 text-muted text-center">&copy; 2022 Karol Pluciński, Łukasz Pietrzak & Paweł Przytuła</p>
-    </div>
+</form>
+<div>
+    <p class="mt-5 mb-5 text-muted text-center">&copy; 2022 Karol Pluciński, Łukasz Pietrzak & Paweł Przytuła</p>
+</div>
 
-    <script src="~/js/SendMail.js"></script>
-
-</body>
 
 
 
