--- a/ProfileMatch.Web/Pages/Shared/_Layout.cshtml
+++ b/ProfileMatch.Web/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 @inject IWebHostEnvironment Environment
 @inject ICompositeViewEngine Engine
 <!DOCTYPE html>
-<html>
+<html lang=en>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -20,10 +20,10 @@
     <header>
 
 
-        <nav class="navbar navbar-expand-sm fixed-top ml-auto navbar-toggleable-sm box-shadow mb-3">
-
+        <nav class="navbar  navbar-expand-sm fixed-top ml-auto navbar-toggleable-sm box-shadow mb-3">
+            <a class="navbar-brand logo" href="~/">Navbar</a>
             <div class="container">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -56,7 +56,7 @@
     </header>
 
     <div class="container">
-        <main role="main" class="pb-3">
+        <main class="pb-3">
 
             @RenderBody()
         </main>
