--- a/ProfileMatch.Web/Pages/_Host.cshtml
+++ b/ProfileMatch.Web/Pages/_Host.cshtml
@@ -16,7 +16,7 @@
     <title>Profile Match</title>
     <base href="~/" />
     <link href="css/site.css" rel="stylesheet" />
-    <link href="ProfileMatch.Sliced.styles.css" rel="stylesheet"/>
+    <link href="ProfileMatch.Web.styles.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 
@@ -39,5 +39,6 @@
     <script src="_framework/blazor.server.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="~/js/blazorTheme.js"></script>
+    @Html.AntiForgeryToken()
 </body>
 </html>
