added method descriptions, user category bug fix that prevented change selection

--- a/ProfileMatch.Components/User/UserCategoryList.razor
+++ b/ProfileMatch.Components/User/UserCategoryList.razor
@@ -15,7 +15,8 @@
         <MudCardContent>
             @if (!edit)
             {
-                @foreach (var uc in publicCategoriesVM)
+
+                @foreach (var uc in UserCategoryVMs.Where(c=>c.IsSelected))
                 {
                     @if(ShareResource.IsEn()){
                     <MudChip Text="@uc.CategoryName"></MudChip>
