--- a/ProfileMatch.Sites/_Imports.razor
+++ b/ProfileMatch.Sites/_Imports.razor
@@ -10,7 +10,7 @@
 @using ProfileMatch.Models
 @using ProfileMatch.Models.Enumerations
 @using ProfileMatch.Models.Models
-
+@inject IStringLocalizer<LanguageService> L
 @using ProfileMatch.Components
 @using ProfileMatch.Components.Culture
 @using ProfileMatch.Components.Layout
