--- a/ProfileMatch.Web/_Imports.razor
+++ b/ProfileMatch.Web/_Imports.razor
@@ -12,7 +12,7 @@
 @using ProfileMatch.Components.Layout
 @using ProfileMatch.Components.Theme
 @using MudBlazor
-
+@inject IStringLocalizer<LanguageService> L
 @using ProfileMatch.Services
 
 @using ProfileMatch.Sites
