--- a/ProfileMatch.Components/_Imports.razor
+++ b/ProfileMatch.Components/_Imports.razor
@@ -5,7 +5,7 @@
 
 @using ProfileMatch.Components
 @using ProfileMatch.Services
-
+@inject IStringLocalizer<LanguageService> L
 @using System.Net.Http
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
