--- a/ProfileMatch.Components/Admin/Dialogs/AdminUserDialog.razor
+++ b/ProfileMatch.Components/Admin/Dialogs/AdminUserDialog.razor
@@ -4,18 +4,50 @@
 }
 else
 {
+   
     <MudDialog>
+
         <DialogContent>
+           
             <MudForm @ref="Form">
-                @if (created)
-                {
-                    <MudAvatar Image="@EditedUser.PhotoPath">
-                    </MudAvatar>
-                    <InputFile OnChange="@UploadImage" id="fileInput" accept=".jpg, .jpeg, .png" />
-                    <MudButton HtmlTag="label" for="fileInput">@L["Upload Photo"]</MudButton>
-                }
+              <MudGrid>
+                  
+               
+                
+                       
+                      <MudItem xs="6" >
+                <MudTextField T="string" @bind-Value="@EditedUser.FirstName" Immediate="true" Label=@L["First Name"]
+                          Required="true" RequiredError=@L["Person name is required!"]  /></MudItem>
+              <MudItem xs="6"><MudTextField T="string" @bind-Value="@EditedUser.LastName" Immediate="true" Label=@L["Last Name"]
+                   Required="true" RequiredError=@L["Person name is required!"] /> </MudItem>
+                  
+ 
+                  <MudItem xs="6">
+                <MudDatePicker @bind-Date="@EditedUser.DateOfBirth"
+                           Required="true"
+                           Rounded="true"
+                           Elevation="1"
+                           RequiredError=@L["BirthDate is Required"]
+                           Label=@L["Select Date of Birth"]
+                           Editable="false" /></MudItem>
+                <MudItem xs="6">
+                <MudSelect Required="true" T="Gender?" Label=@L["Select Gender"] @bind-Value="@EditedUser.Gender"
+                       OffsetY="true" RequiredError=@L["Gender is required!"]
+                       CloseIcon="@Icons.Material.Filled.LocationCity"
+                       HelperText=@L["Select Gender"]
+                       AdornmentColor="Color.Tertiary">
+                    @foreach (Gender? g in Enum.GetValues(typeof(Gender)))
+                    {
+                        <MudSelectItem Value="@g">@L[g.ToString()]</MudSelectItem>
+                    }
+                </MudSelect>
+                </MudItem>
+
+            
+                
                 @if (ShareResource.IsEn())
                 {
+                     <MudItem xs="6">
                     <MudSelect @bind-Value="@EditedUser.DepartmentId"
                        T="int"
                        OffsetY="true"
@@ -27,9 +59,11 @@ else
                             <MudSelectItem Value="@(dept.Id)">@dept.Name</MudSelectItem>
                         }
                     </MudSelect>
+                     </MudItem>
                 }
                 else
                 {
+                    <MudItem xs="6">
                     <MudSelect @bind-Value="@EditedUser.DepartmentId"
                        T="int"
                        OffsetY="true"
@@ -41,17 +75,11 @@ else
                             <MudSelectItem Value="@(dept.Id)">@dept.NamePl</MudSelectItem>
                         }
                     </MudSelect>
+                    </MudItem>
                 }
-                <MudSwitch @bind-Checked="@EditedUser.IsActive"
-                       T="bool"
-                       Label=@L["Is Active?"]
-                       Color="Color.Success" />
-                <MudTextField T="string" @bind-Value="@EditedUser.FirstName" Immediate="true" Label=@L["First Name"]
-                          Required="true" RequiredError=@L["Person name is required!"] />
-                <MudTextField T="string" @bind-Value="@EditedUser.LastName" Immediate="true" Label=@L["Last Name"] Required="true" RequiredError=@L["Person name is required!"] />
-                <MudTextField T="string" Label=@L["Email"] @bind-Value="@EditedUser.Email" Required="true" RequiredError=@L["Email is required!"] />
-                @if (ShareResource.IsEn())
+                  @if (ShareResource.IsEn())
                 {
+                    <MudItem xs="6">
                     <MudSelect Required="true" T="int" Label=@L["Select Job Title"] @bind-Value="@EditedUser.JobTitleId"
                        OffsetY="true" RequiredError=@L["Job Title is required!"] HelperText=@L["Select Job Title"] AdornmentColor="Color.Tertiary">
                         @foreach (JobTitle job in jobTitles)
@@ -59,9 +87,11 @@ else
                             <MudSelectItem T="int" Value="@job.Id">@job.Name</MudSelectItem>
                         }
                     </MudSelect>
+                    </MudItem>
                 }
                 else
                 {
+                    <MudItem xs="6">
                     <MudSelect Required="true" T="int" Label=@L["Select Job Title"] @bind-Value="@EditedUser.JobTitleId"
                        OffsetY="true" RequiredError=@L["Job Title is required!"] HelperText=@L["Select Job Title"] AdornmentColor="Color.Tertiary">
                         @foreach (JobTitle job in jobTitles)
@@ -69,36 +99,26 @@ else
                             <MudSelectItem T="int" Value="@job.Id">@job.NamePl</MudSelectItem>
                         }
                     </MudSelect>
+                    </MudItem>
                 }
-                <MudSelect Required="true" T="Gender?" Label=@L["Select Gender"] @bind-Value="@EditedUser.Gender"
-                       OffsetY="true" RequiredError=@L["Gender is required!"]
-                       CloseIcon="@Icons.Material.Filled.LocationCity"
-                       HelperText=@L["Select Gender"]
-                       AdornmentColor="Color.Tertiary">
-                    @foreach (Gender? g in Enum.GetValues(typeof(Gender)))
-                    {
-                        <MudSelectItem Value="@g">@L[g.ToString()]</MudSelectItem>
-                    }
-                </MudSelect>
-                <MudDatePicker @bind-Date="@EditedUser.DateOfBirth"
-                           Required="true"
-                           Rounded="true"
-                           Elevation="1"
-                           RequiredError=@L["BirthDate is Required"]
-                           Label=@L["Select Date of Birth"]
-                           Editable="false" />
+                           
+                <MudItem xs="6"> <MudTextField T="string" Label=@L["Email"] @bind-Value="@EditedUser.Email" Required="true" RequiredError=@L["Email is required!"] /> </MudItem>
                 @if (created)
-                {
+                {<MudItem xs="6">
                     <MudTextField Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Outlined.Warning" AdornmentColor="Color.Warning" T="String" Label="@L["New Password"]" InputType="InputType.Password" @bind-Value="@PasswordHash" />
+                </MudItem>
                 }
                 else
                 {
+                    <MudItem xs="6">
                     <MudTextField Required="true" InputType="InputType.Password" RequiredError="@L["Password is required"]" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Outlined.Warning" AdornmentColor="Color.Warning" T="String" Label="@L["New Password"]" @bind-Value="@PasswordHash" />
+               </MudItem>
                 }
 
 
                 @if (canChangeRoles)
                 {
+                    <MudItem xs="6">
                     <MudTable Items="@UserRolesVM">
                         <HeaderContent>
                             <MudTh>@L["Role Name"]</MudTh>
@@ -111,10 +131,38 @@ else
                             </MudTd>
                         </RowTemplate>
                     </MudTable>
-                }
+                    </MudItem>
+                     }
+
+                     @if (created)
+                {
+                    <MudItem xs="6">
+                    <MudAvatar Image="@EditedUser.PhotoPath">
+                    </MudAvatar>
+                    <InputFile hidden OnChange="@UploadImage" id="fileInput" accept=".jpg, .jpeg, .png" />
+                    <MudButton HtmlTag="label" for="fileInput">@L["Upload Photo"]</MudButton>
+
+                      <MudSwitch @bind-Checked="@EditedUser.IsActive"
+                      Class="pa-6 mt-auto"
+                       T="bool"
+                       Label=@L["Is Active?"]
+                       Color="Color.Success" />
+                        </MudItem>
+                        
+                    }
+                    else
+                    {
+                        <MudItem xs="6"></MudItem>
+
+                    }
+
+
+               </MudGrid>
             </MudForm>
+           
         </DialogContent>
         <DialogActions>
+           
             @if (created)
             {
                 <MudButton Size="Size.Small" Variant=Variant.Outlined Color="Color.Warning" OnClick="@(()=>ResetPassword(PasswordHash))">@L["Change Password"]</MudButton>
@@ -123,12 +171,17 @@ else
             {
                 <MudButton Size="Size.Small" Color="Color.Error" Variant="Variant.Outlined" OnClick="ToggleOpen">@L["Delete"]</MudButton>
             }
+            
             <MudButton Size="Size.Small" Color="Color.Warning" Variant="Variant.Outlined" OnClick="Cancel">@L["Cancel"]</MudButton>
             <MudButton OnClick="@HandleSave" Variant="Variant.Outlined" StartIcon="@Icons.Material.Filled.Save" Color="Color.Success" Size="Size.Small">@L["Save"]</MudButton>
+       
         </DialogActions>
+         
     </MudDialog>
+    
 }
 <MudPopover AnchorOrigin="Origin.CenterCenter" Open="@_isOpen" Fixed="true" Class="px-4 pt-4">
+     
     <div class="d-flex flex-column">
         @if (ShareResource.IsEn())
         {
@@ -138,7 +191,9 @@ else
         {
             <MudText>@($"\nNa pewno usunąć użytkownika {EditedUser.FullName}?")</MudText>
         }
+         
         <MudButton Size="Size.Small" Color="Color.Error" Variant="Variant.Outlined" OnClick="@(()=>DeleteUser(EditedUser.Id))">@L["Delete"]</MudButton>
         <MudButton OnClick="@ToggleOpen" Class="ml-auto mr-n3 mb-1" Color="Color.Warning">@L["Cancel"]</MudButton>
     </div>
+    
 </MudPopover>
