minor cert update

--- a/ProfileMatch.Components/Layout/MainLayout.razor
+++ b/ProfileMatch.Components/Layout/MainLayout.razor
@@ -4,7 +4,7 @@
                    NoHeader="false"
                    Position="DialogPosition.Center" />
 <MudSnackbarProvider />
-<MudThemeProvider Theme="currentTheme" @bind-IsDarkMode="@isDarkTheme"/>
+<MudThemeProvider Theme="currentTheme"/>
 <MudLayout>
             
                 <MudAppBar Elevation="4">
