--- a/ProfileMatch.Web/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
+++ b/ProfileMatch.Web/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
@@ -12,10 +12,11 @@
         <form method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Input.Email"></label>
+                <label asp-for="Input.Email">Email:</label>
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
+            <br />
             <button type="submit" class="btn btn-primary">Resend</button>
         </form>
     </div>
